<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">My Personal Trainner</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_novo_exercicio">+Exercicio</string>
    <string name="action_delete">Excluir</string>
    <string name="action_editar">Editar</string>
    <string name="user_name">Usuário</string>
    <string name="user_lvl">Level: ?</string>
    <string name="user_xp">Experiência: ?/?</string>
    <string name="title_activity_principal">PrincipalActivity</string>
    <string name="title_activity_meus_treinos">MeusTreinos</string>
    <string name="action_novo_treino">Novo Treino</string>
    <string name="action_editar_treino">Editar Treino</string>
    <string name="friend">Amigos</string>
    <string name="selected_training">Treino</string>
    <string name="my_training">Meus Treinos</string>
    <string name="title_activity_side_bar">SideBarActivity</string>
    <string name="spinner_categoria">Escolha a Categoria</string>

    <string-array name="my_facebook_permissions">
        <item>public_profile</item>
        <item>user_relationships</item>
        <item>user_location</item>
        <item>user_friends</item>
    </string-array>

    <!-- Numro de series para o spinner -->
    <string-array name="num_series">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>

    <!-- Nomes para o Spinner -->
    <string-array name="categorias_de_exercicios">
        <item>Escolha uma Categoria</item>
        <item>Abdome</item>
        <item>Costas</item>
        <item>Peito</item>
        <item>Triceps</item>
        <item>Perna</item>
        <item>Biceps</item>
    </string-array>

    <!--
   chaves
   <string name="parse_app_id">A8T3Z4NhU61cher7KQm3HvokLHnJk8eCmyevyFN1</string>
   <string name="parse_client_key">Xh0t2EmUF3eNBYp8N3He6PD0tP5bvJ41EX7MA4yw</string>
   <string name="facebook_app_id">370422519809290</string>
   !
    -->

    <string name="parse_app_id">zAMAiwyXWH7rYYBCuZlnchjIW5CvVw9JtpotJ37g</string>
    <string name="parse_client_key">fZo3txX0EgWHS4bkVIiLzH0h9yPGcS20h1nxOw3u</string>
    <string name="facebook_app_id">1556506021251662</string>

    <!-- nomes das opções da sidebar! -->
    <string name="title_section1">Treino de Hoje</string>
    <string name="title_section2">Treinos Cadastrados</string>
    <string name="title_section4">Logout</string>
    <string name="title_section3">Treinos Ativos</string>
    <!-- fim nomes das opções da sidebar! -->

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="title_activity_configurar_treino_my">Novo Treino</string>
    <string name="title_activity_treino_de_hoje">Treino de Hoje</string>
    <string name="title_activity_execicio">ExecicioActivity</string>
    <string name="title_activity_trainig_detail">Trainig Detail</string>
    <string name="title_activity_treinos_ativos">TreinosAtivosActivity</string>
    <string name="title_activity_adiciona_exercicio_ao_treino">Adicionar Exercício</string>
    <string name="nome_do_exercicio">Nome do Exercício</string>
    <string name="series_do_exercicio">Séries</string>
    <string name="carga_do_exercicio">Carga</string>
    <string name="title_activity_tutorial">TutorialActivity</string>

</resources>
