<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    tools:context="ufba.mypersonaltrainner.AdicionaExercicioAoTreinoActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Novo Exercício" />
        <!--android:id="@+id/txtView_addExerc" />-->
    <EditText
        android:id="@+id/add_exercicio_nome_do_exercicio"
        android:inputType="text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="4dp"
        android:hint="@string/nome_do_exercicio" />
    <EditText
        android:id="@+id/add_exercicio_series_do_exercicio"
        android:inputType="number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="4dp"
        android:hint="@string/series_do_exercicio"/>
    <EditText
        android:id="@+id/add_exercicio_carga_do_exercicio"
        android:inputType="number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="16dp"
        android:hint="@string/carga_do_exercicio"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Confirma"
        android:layout_gravity="center_horizontal"
        android:onClick="confirma" />
</LinearLayout>