<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_margin="15dp"
    xmlns:facebook="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    
   <com.facebook.widget.ProfilePictureView
                android:id="@+id/img_perfil"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_gravity="center"
                android:gravity="center_horizontal"
                facebook:preset_size="normal" />
<!--  
<ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/img_perfil"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:src="@drawable/img_perfil"
        android:maxHeight="150dp"
        android:maxWidth="150dp"
        android:adjustViewBounds="true"/>
 -->     
 <TextView
        android:id="@+id/user_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_name"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_toRightOf="@id/img_perfil"
        android:layout_marginLeft="10dp"/>
    <TextView
        android:id="@+id/user_lvl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_lvl"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_toRightOf="@id/img_perfil"
        android:layout_below="@id/user_name"
        android:layout_marginLeft="10dp"/>
    <TextView
        android:id="@+id/user_xp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_xp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_toRightOf="@id/img_perfil"
        android:layout_below="@id/user_lvl"
        android:layout_marginLeft="10dp"/>

    <ProgressBar
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/Bar_xp"
        android:layout_below="@id/user_xp"
        android:layout_toRightOf="@id/img_perfil"
        android:layout_margin="5dp"/>


</RelativeLayout>
